--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,65 @@
 version: '3.7'
 
 services:
-  zabbix-all-in-one:
-    image: zabbix/zabbix-appliance:6.4-latest
-    container_name: zabbix-all-in-one
-    ports:
-      - "8080:80"       # Interfície web
-      - "10051:10051"   # Port de comunicació del servidor
+  zabbix-db:
+    image: mysql:8.0
+    container_name: zabbix-db
     environment:
-      DB_SERVER_HOST: localhost
       MYSQL_DATABASE: zabbix
       MYSQL_USER: zabbix
       MYSQL_PASSWORD: zabbix_password
       MYSQL_ROOT_PASSWORD: root_password
     volumes:
-      - zabbix-data:/var/lib/zabbix
-    restart: unless-stopped
+      - zabbix-db:/var/lib/mysql
+    networks:
+      - zabbix-net
+
+  zabbix-server:
+    image: zabbix/zabbix-server-mysql:ubuntu-6.4-latest
+    container_name: zabbix-server
+    environment:
+      DB_SERVER_HOST: zabbix-db
+      MYSQL_DATABASE: zabbix
+      MYSQL_USER: zabbix
+      MYSQL_PASSWORD: zabbix_password
+    depends_on:
+      - zabbix-db
+    ports:
+      - "10051:10051"
+    networks:
+      - zabbix-net
+
+  zabbix-web:
+    image: zabbix/zabbix-web-nginx-mysql:ubuntu-6.4-latest
+    container_name: zabbix-web
+    environment:
+      DB_SERVER_HOST: zabbix-db
+      MYSQL_DATABASE: zabbix
+      MYSQL_USER: zabbix
+      MYSQL_PASSWORD: zabbix_password
+      ZBX_SERVER_HOST: zabbix-server
+      PHP_TZ: Europe/Barcelona
+    depends_on:
+      - zabbix-server
+    ports:
+      - "8080:8080"
+    networks:
+      - zabbix-net
+
+  zabbix-agent:
+    image: zabbix/zabbix-agent:ubuntu-6.4-latest
+    container_name: zabbix-agent
+    environment:
+      ZBX_SERVER_HOST: zabbix-server
+      HOSTNAME: zabbix-agent
+    depends_on:
+      - zabbix-server
+    networks:
+      - zabbix-net
 
 volumes:
-  zabbix-data:
+  zabbix-db:
+
+networks:
+  zabbix-net:
+    driver: bridge
