--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,100 @@
-version: '3.7'
-
 services:
-  zabbix-db:
-    image: mysql:8.0
-    container_name: zabbix-db
-    environment:
-      MYSQL_DATABASE: zabbix
-      MYSQL_USER: zabbix
-      MYSQL_PASSWORD: zabbix_password
-      MYSQL_ROOT_PASSWORD: root_password
-    volumes:
-      - zabbix-db:/var/lib/mysql
-    networks:
-      - zabbix-net
-
   zabbix-server:
-    image: zabbix/zabbix-server-mysql:ubuntu-6.4-latest
-    container_name: zabbix-server
-    environment:
-      DB_SERVER_HOST: zabbix-db
-      MYSQL_DATABASE: zabbix
-      MYSQL_USER: zabbix
-      MYSQL_PASSWORD: zabbix_password
-    depends_on:
-      - zabbix-db
+    image: ${ZABBIX_SERVER_IMAGE:-zabbix/zabbix-server-pgsql:ubuntu-7.0-latest}
+    container_name: server
+    restart: unless-stopped
     ports:
       - "10051:10051"
-    networks:
-      - zabbix-net
-
-  zabbix-web:
-    image: zabbix/zabbix-web-nginx-mysql:ubuntu-6.4-latest
-    container_name: zabbix-web
     environment:
-      DB_SERVER_HOST: zabbix-db
-      MYSQL_DATABASE: zabbix
-      MYSQL_USER: zabbix
-      MYSQL_PASSWORD: zabbix_password
-      ZBX_SERVER_HOST: zabbix-server
-      PHP_TZ: Europe/Barcelona
+      DB_SERVER_HOST: postgres
+      DB_SERVER_PORT: 5432
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     depends_on:
-      - zabbix-server
+      - postgres
+    networks:
+      - network-zabbix
+
+  zabbix-frontend:
+    image: ${ZABBIX_FRONTEND_IMAGE:-zabbix/zabbix-web-nginx-pgsql:ubuntu-7.0-latest}
+    restart: unless-stopped
+    container_name: frontend
     ports:
       - "8080:8080"
-    networks:
-      - zabbix-net
-
-  zabbix-agent:
-    image: zabbix/zabbix-agent:ubuntu-6.4-latest
-    container_name: zabbix-agent
+      - "8443:8443"
     environment:
+      DB_SERVER_HOST: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      PHP_TZ: ${TZ}
       ZBX_SERVER_HOST: zabbix-server
-      HOSTNAME: zabbix-agent
+      ZBX_SERVER_PORT: 10051
     depends_on:
       - zabbix-server
     networks:
-      - zabbix-net
+      - network-zabbix
+
+  zabbix-agent:
+    image:  ${ZABBIX_AGENT_IMAGE:-zabbix/zabbix-agent:ubuntu-7.0-latest}
+    container_name: agent
+    restart: unless-stopped
+    ports:
+      - "10050:10050"
+    environment:
+      ZBX_ACTIVE_ALLOW: false
+      TZ: ${TZ}
+      ZBX_SERVER_HOST: zabbix-server
+      ZBX_SERVER_PORT: 10051
+      ZBX_HOSTNAME: zabbix-agent
+      ZBX_HOSTNAMEITEM: system.hostname
+    depends_on:
+      - zabbix-server
+    networks:
+      - network-zabbix
+
+  postgres:
+    image: ${POSTGRES_IMAGE:-postgres:latest}
+    container_name: postgres
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      PG_DATA: /var/lib/postgresql/data/pgdata
+    networks:
+      - network-zabbix
+
+  grafana:
+    image: ${GRAFANA_IMAGE:-grafana/grafana}
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: ${GRAFANA_USER:-admin}
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_SECRET:-12345}
+      GF_INSTALL_PLUGINS: alexanderzobnin-zabbix-app
+      TZ: ${TZ}
+    user: "472"
+    volumes:
+      - grafana:/var/lib/grafana
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
+      - ./grafana/provisioning:/etc/grafana/provisioning
+    depends_on:
+      - zabbix-frontend
+    networks:
+      - network-zabbix
 
 volumes:
-  zabbix-db:
+  postgres: {}
+  grafana: {}
 
 networks:
-  zabbix-net:
+  network-zabbix:
     driver: bridge
